@@ -156,16 +156,6 @@ char_name_option: 1
 // Note: Don't add spaces unless you mean to add 'space' to the list.
 char_name_letters: abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890
 
-// Character rename option. 
-// When set to yes, the server will send an extended char-info packet, 
-// informing whether the character can be renamed or not.
-// NOTE: This option is for compatibility with kRO sakray 2006-10-23 and newer.
-//       !Do not disable it for these clients since it will crash them!
-//       !Do not use it for any other type of client since it will crash them too!
-//       !If you really wanna disable it for newer clients, change the default value to the setting value in `rename` column of `char` table!
-// 0: off, 1+: the maximun number of times you can change each character's name
-char_rename: 1
-
 // How many Characters are allowed per Account ? (0 = disabled) [SQL Only!]
 chars_per_account: 0
 
